tests/Tree/negative/test014.jvt
-- calling unsupported anoma-verify

function main() : * {
  anoma-verify(1,2)
}
